kubernetes/hello-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-api

  template:
    metadata:
      labels:
        app: hello-api

    spec:
      containers:
        - name: hello-api
          image: hello-api:latest
          imagePullPolicy: Never

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
              
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
