kubernetes/hello-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-api-service

spec:
  type: NodePort

  selector:
    app: hello-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
