kubernetes/user-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-api-service

spec:
  type: NodePort

  selector:
    app: user-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30082
