kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: api-routes

spec:
  parentRefs:
    - name: traefik-gateway

  rules:

    - matches:
        - path:
            type: PathPrefix
            value: /api/hello

        - path:
            type: PathPrefix
            value: /api/cpu-test

      backendRefs:
        - name: hello-api-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /api/user

      backendRefs:
        - name: user-api-service
          port: 80
